--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,24 @@
-.App {
-  text-align: center;
+html, body, .root {
+  height: 100%;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+body {
+  line-height: 1.5;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+body, .app {
+  background: white;
 }
 
-.App-title {
-  font-size: 1.5em;
-}
 
-.App-intro {
-  font-size: large;
-}
+/*
+ * Map div container
+ */
 
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+#map {  
+  width: 80%;
+  height: 80%;
+  position: absolute;
+  overflow: hidden;
 }
+ 
