--- a/src/App.css
+++ b/src/App.css
@@ -81,6 +81,17 @@ li:hover {
   color: #333;
 }
 
+li button {
+  all: inherit;
+  padding: 0;
+}
+
+li button:focus {
+  /* outline: 0.5px dashed white; <- alternative styling */
+  text-decoration: underline;
+  text-decoration-style: dotted;
+}
+ 
 .sidebar-items-search-input {
   padding: 12px 20px;
   margin: 12px 0 10px 16px; 
@@ -100,12 +111,20 @@ li:hover {
   cursor: pointer;
 }
 
+.icon-container:focus {  
+  outline: 0;
+}
+
 .bar1, .bar2, .bar3 {
   width: 35px;
   height: 5px;
   background-color: #333; 
   margin: 6px 0;
   transition: 0.4s;
+}
+
+.focused {
+  background-color: white;
 }
 
 .change .bar1 {
@@ -154,6 +173,6 @@ li:hover {
 } 
 
 .info-window-img:hover  {
-    opacity: 1.0 !important;
-    filter: alpha(opacity=100) !important; /* For IE8 and earlier */
+  opacity: 1.0 !important;
+  filter: alpha(opacity=100) !important; /* For IE8 and earlier */
 }
