--- a/src/App.css
+++ b/src/App.css
@@ -176,3 +176,82 @@ li button:focus {
   opacity: 1.0 !important;
   filter: alpha(opacity=100) !important; /* For IE8 and earlier */
 }
+
+
+/*
+ * Error message styling
+ */
+
+.error-container {  
+  display: block;   
+  position: absolute;
+  top: 30%;
+  width: 100%;      
+  background-color: #78909C; 
+  color: white; 
+  z-index: 5;   
+}
+
+.error-message-fullscreen { 
+  margin: 0; 
+  font-size: 5em;   
+  text-align: center;
+  padding: 20px;
+}
+
+
+/*
+ * Loading...
+ */
+
+.loading-message {   
+  font-size: 1em;    
+  padding-left: 20px;  
+  position:absolute;
+}
+
+
+/*
+ * Responsive layout 
+ */
+
+@media screen and (max-width: 304px) { 
+  
+  .error-message-fullscreen {
+    font-size: 1em;     
+    padding: 7px;
+  }
+  
+  .error-container {
+    min-width:165px;
+  }
+}
+
+@media screen and (min-width: 305px) and (max-width: 424px) { 
+  
+  .error-message-fullscreen {
+    font-size: 1.5em;     
+    padding: 7px;
+  }
+}
+
+@media screen and (min-width: 425px) and (max-width: 620px) { 
+  
+  .error-message-fullscreen {
+    font-size: 2em;     
+  }
+}
+
+@media screen and (min-width: 621px) and (max-width: 810px) { 
+  
+  .error-message-fullscreen {
+    font-size: 3em;     
+  }
+}
+
+@media screen and (min-width: 811px) and (max-width: 1024px)  { 
+  
+  .error-message-fullscreen {
+    font-size: 4em;     
+  }
+}
