--- a/src/App.css
+++ b/src/App.css
@@ -24,6 +24,7 @@ body, .app {
   height: 100%;
   position: absolute;
   overflow: hidden;
+  min-width: 190px;
 }
 
 
@@ -34,6 +35,7 @@ body, .app {
 .sidebar-container {
   display: flex;
   flex-wrap: wrap;
+  min-width: 190px;
   width: 100%;  
   background-color: #78909C; 
   color: white; 
@@ -214,6 +216,18 @@ li button:focus {
 /*
  * Responsive layout 
  */
+
+@media screen and (max-width: 280px) { 
+  
+  li button {
+    font-size: 0.9em;
+  }
+  
+  .sidebar-items-search-input {
+    padding: 6px;
+    width: 140px;
+  }
+}
 
 @media screen and (max-width: 304px) { 
   
