--- a/src/App.css
+++ b/src/App.css
@@ -179,6 +179,10 @@ li button:focus {
   filter: alpha(opacity=100) !important; /* For IE8 and earlier */
 }
 
+.info-window-flickr-logo {  
+  margin-top: 30px;
+  max-width: 60px !important;
+}
 
 /*
  * Error message styling
