--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@ body {
 }
 
 body, .app {
-  background: white;
+  background: #333;
 }
 
 
@@ -20,7 +20,7 @@ body, .app {
  */
 
 #map {  
-  width: 100%;
+  width: 100%;  
   height: 100%;
   position: absolute;
   overflow: hidden;
@@ -39,7 +39,7 @@ body, .app {
   width: 100%;  
   background-color: #78909C; 
   color: white; 
-  position: absolute;
+  /* position: absolute; */
   z-index: 5; 
   -webkit-user-select: none;  /* Chrome all / Safari all */
   -moz-user-select: none;     /* Firefox all */
@@ -217,7 +217,7 @@ li button:focus {
   padding-left: 20px;  
   position:absolute;
 }
-
+ 
 
 /*
  * Responsive layout 
